<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSubject"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0"
    android:padding="5dip"
    android:orientation="horizontal"
    android:scrollbars="vertical"
>

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="60dip"
        android:layout_height="48dip"
        android:text="@string/record"
        android:textSize="18dip" />

<Button android:id="@+id/btnPlay" 
      			 android:layout_width="60dip"	   
		android:layout_height="48dip" 
		android:text="@string/playrecord"	
		 android:textSize="18dip"       
	
	 />

 <Button android:text="@string/nextsubject" 
               android:id="@+id/tvNext"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
            
               android:textSize="18dip" 
               android:textColor="#000"
              />     
		
 <ImageView
        android:id="@+id/ivLaba"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_marginLeft="0dip"       
       android:contentDescription="@string/alert_name"
       android:src="@drawable/laba"
         />
 
  <Button android:text="@string/showQuestion" 
               android:id="@+id/btnShowQuestion"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"            
               android:textSize="18dip" 
               android:textColor="#000"
                 android:visibility="gone"
              /> 
 <TextView android:id="@+id/tvQuestion"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text=""
  android:paddingLeft="2dip"
  android:textSize="20dip" 
  android:layout_marginTop="5dip"
  android:layout_marginLeft="10dip"
  android:layout_marginRight="10dip"
  android:textColor="#000"   
  />
  <!-- 
  <ImageView android:id="@+id/ivSubject" 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" 
  android:padding="2px"
/> -->
</LinearLayout>
